--- a/index.html
+++ b/index.html
@@ -12,8 +12,22 @@
 </head>
 
 <body>
+    <header>
+        <div class="logo">
+            <img src="img/lambda-black.png">
+        </div>
+        <nav>
+            <a href="#" target="_self">Home</a>
+            <a href="about.html" target="_self">About</a>
+            <a href="#" target="_self">Products</a>
+            <a href="#" target="_self">Blog</a>
+            <a href="#" target="_self">Contact</a>
+        </nav>
+    </header>
+    <section class= "picture">
+        <img src="img/jumbo.jpg">
+    </section>
     <div class="container">
-   
         <section class="top-content">
             <div class="text-container">
                 <h2>The Future</h2>
