--- a/about.html
+++ b/about.html
@@ -12,11 +12,11 @@
 </head>
 
 <body>
-<header class="header2">
+<header>
   <div class="logo2">
       <img src="img/lambda-black.png">
   </div>
-  <nav class="nav2">
+  <nav>
       <a href="index.html" target="_self">Home</a>
       <a href="#" target="_self">About</a>
       <a href="#" target="_self">Products</a>
@@ -35,33 +35,25 @@
     <div>
       <img src="img/about-plan.png" alt="strategy">
       <h2>Strategy</h2>
-      <div class="paragraph">
-        <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-      </div>
+      <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
       <h3><a href="#">Learn More</a></h3>
     </div>
     <div>
       <img src="img/about-working.png" alt="strategy">
       <h2>How We Work</h2>
-      <div class="paragraph">
-        <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-      </div>
-        <h3><a href="#">Learn More</a></h3>
+      <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+      <h3><a href="#">Learn More</a></h3>
     </div>
     <div>
       <img src="img/about-office.png" alt="strategy">
       <h2>Places We Work</h2>
-      <div class="paragraph">
-        <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-      </div>
+      <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
       <h3><a href="#">Learn More</a></h3>
     </div>
     <div>
       <img src="img/about-meeting.png" alt="strategy">
       <h2>Collaboration</h2>
-      <div class="paragraph">
-        <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-      </div>
+      <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
       <h3><a href="#">Learn More</a></h3>
     </div>
 </section>
@@ -69,7 +61,7 @@
     <h2>Let's Work Together</h2>
     <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
 </section>
-      <footer>
+      <footer class="footer2">
         <nav>
           <a href="index.html">Home</a>
           <a href="#">About</a>
